--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.47.1", features = [
 ], optional = true }
 
 [dev-dependencies]
+tempfile = "3.21.0"
 tokio = { version = "1.47.1", features = [
 	"rt",
 	"tokio-macros",
