--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ tokio = { version = "1.47.1", features = [
 	"macros",
 	"rt-multi-thread",
 ], optional = true }
+tracing = "0.1.41"
 
 [dev-dependencies]
 tempfile = "3.21.0"
